<resources>
    <string name="app_name">运动加速器</string>
    <string name="action_settings">Settings</string>
    <string name="xposed_description">安卓手机运动加速器</string>
    <string name="up_limit">步数上限</string>
    <string name="speed_rate">加速倍率</string>
    <string name="delete_record">删除支付宝运动记录</string>
    <string name="des_delete_record">删除支付宝运动数据记录</string>
    <string name="rate">20L</string>
    <string name="app">应用</string>
    <string name="setting">设置</string>


    <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>
    <string name="sensor_log">传感器日志</string>
    <string name="config_log">配置日志</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="alipay">支付宝</string>
    <string name="qq">QQ</string>

    <string name="pk_alipay">com.eg.android.AlipayGphone</string>
    <string name="pk_qq">com.tencent.mobileqq</string>
    <string name="enable">已启用加速</string>
    <string name="disable">已关闭加速</string>
    <string name="stop_app">尝试停止应用</string>
    <string name="direct_edit">尝试直接修改运动数据</string>

    <string name="about_ali">支付宝进行运动数据的上传会有一定的间隔,所以不是你每次打开进入运动界面都会看到最新的运动数据,需要等一会......\n
        如果看到的不是理想的运动数据,请过几分钟再进入或关闭应用再重新打开 </string>
    <string name="summary_stop_app">修改配置参数会在该应用下次启动时才生效,若应用正在运行,可点击尝试停止应用</string>
    <string name="summary_about_global">
        1.关于重启手机后功能失效的问题,是因为部分7.0手机在重启后会将SharedPreferences文件的权限重置为私有,Xposed读不到配置,只需要打开本App一次即可,App会将配置文件改为全局可读\n
        2.启用加速功能需要把相应的app打开,或者让app在后台运行,并且你处于行走/运动状态,或者你拿着手机在手上晃动让app计步
    </string>
    <string name="stop_alipay">尝试停止支付宝</string>
    <string name="log_sensor">打开会将传感器的数据写入到日志中\n\n
        若不需查看加速记录可关闭,\n建议关闭,避免不必要的性能损耗
    </string>
    <string name="log_config">应用打开的时候将读取到的配置记录到日志文件,若所有功能正常可关闭</string>
    <string name="a_cup_of_tea">请我喝杯茶</string>
    <string name="ali_step_edit">直接修改</string>
    <string name="summary_ali_edit">直接修改运动数据</string>
    <string name="ali_first_edit">每次启动App时需要增加的步数</string>
    <string name="edit_ali_step">直接修改支付宝运动数据</string>
    <string name="tips">建议</string>
    <string name="summary_tip">建议每次增加的步数尽量调小,尽量不要超过10000,否则增加步数太快可能会导致被检测为异常</string>
    <string name="ali_mode">当前模式</string>
    <string name="edit">直接修改</string>
    <string name="about_ali_edit">关于直接修改步数</string>
    <string name="summary_about_edit">
        1.直接修改步数是在App启动的时候去修改支付宝保存在本地的运动记录,从而达到修改运动步数的目的\n
        2.建议每次增加的步数尽量调小,尽量不要超过10000,否则增加步数太快可能会被检测为异常,导致修改失败\n
        3.支付宝进行运动数据的上传会有一定的间隔,启动App的时候距离上次启动时间过短,数据可能不会上传\n
        4.修改上限为步数上限,超过步数上限,今天不会再修改
    </string>
    <string name="about_ali_sensor">关于传感器加速</string>
    <string name="summary_about_sensor">支付宝启动的时候会启动一个进程检测传感器数据,通过钩住系统Api dispatchSensorEvent,
        在应用监测到传感器运动数据之前进行数据的修改,让应用接收到修改过的传感器数据,从而达到加速的目的,
        该方式不会影响手机或应用的其他功能
    </string>
    <string name="summary_config_log">记录配置文件以及步数的读取情况</string>
    <string name="summary_sensor_log">记录传感器数据记录,日志较多,若无需查看,建议关闭</string>
    <string name="sensor_speedup">传感器加速</string>
</resources>
