<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/ali_edit_way_display"
        android:entryValues="@array/ali_edit_way_key"
        android:key="@string/pk_alipay"
        android:negativeButtonText="@null"
        android:summary="@string/edit"
        android:title="@string/ali_mode"/>

    <EditTextPreference
        android:defaultValue="30000"
        android:inputType="number"
        android:key="sp_key_ali_upper_limit"
        android:summary="30000"
        android:title="@string/up_limit"/>

    <EditTextPreference
        android:defaultValue="30"
        android:inputType="number"
        android:key="sp_key_ali_rate"
        android:numeric="integer"
        android:summary="15"
        android:title="@string/speed_rate"/>


    <EditTextPreference
        android:defaultValue="9998"
        android:inputType="number"
        android:key="sp_key_ali_gain_step"
        android:summary="9998"
        android:title="@string/ali_first_edit"/>

    <Preference
        android:key="edit"
        android:summary="@string/summary_about_edit"
        android:title="@string/about_ali_edit"/>

    <Preference
        android:key="@string/about"
        android:summary="@string/summary_about_sensor"
        android:title="@string/about_ali_sensor"/>

    <Preference
        android:key="stop_app"
        android:summary="@string/summary_stop_app"
        android:title="@string/stop_alipay"/>

</PreferenceScreen>
