<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="ps_root">

    <SwitchPreference
        android:defaultValue="false"
        android:key="sp_key_sensor_log"
        android:summary="@string/summary_sensor_log"
        android:title="@string/sensor_log"/>

    <SwitchPreference
        android:defaultValue="true"
        android:summary="@string/summary_config_log"
        android:key="sp_key_config_log"
        android:title="@string/config_log"/>

    <Preference
        android:key="feedback"
        android:title="@string/feedback"/>

    <Preference
        android:key="a_cup_of_tea"
        android:title="@string/a_cup_of_tea"/>

    <Preference
        android:key="about"
        android:summary="@string/summary_about_global"
        android:title="@string/about"/>

</PreferenceScreen>
